# genesis_backend

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  ECOSYSTEM_DOCTRINE.md  ECOSYSTEM_DOCTRINE_.md  Makefile  PROJECT_SUMMARY.md  README.md  config.py  docker-compose.yml  flake8.config  license.txt  pyproject.toml  tox.ini
.github/: pre-commit-config.yaml
.github/workflow/: ci.yml
agents/: __init__.py  nestjs_agent.py
docker/mongo/: init.js
docker/mysql/: init.sql
docker/postgres/: init.sql
docker/redis/: redis.conf.txt
examples/: example_usage.py
generators/: __init__.py  api_generator.py  auth_agent.py  backend_generator.py  database.py  model_generator.py
genesis-engine/.github/ISSUE_TEMPLATE/: cross-repo-issue.yml
genesis-engine/.github/workflows/: multi-repo-test.yml
genesis-engine/genesis-engine/: README.md
genesis-engine/genesis-engine-agents/: README.md  package.json
genesis-engine/genesis-engine-api/: package.json
genesis-engine/genesis-engine-cli/: README.md  package.json
genesis-engine/genesis-engine-core/: README.md  package.json
genesis-engine/genesis-engine-studio/: package.json
genesis-engine/genesis-engine-templates/: README.md  package.json
genesis-engine/genesis-engine-web/: README.md  package.json
genesis-engine/scripts/: release.sh  setup-dev.sh
genesis_agents/: __init__.py
genesis_templates/: __init__.py
mcpturbo/: __init__.py  protocol.py
pytest_asyncio/: __init__.py
src/agents/fastapi/: fastapi_agent.py
src/genesis_backend/: __init__.py
src/genesis_backend/agents/: __init__.py  architect.py  django_agent.py
src/genesis_backend/generators/: auth_generator.py
tests/: conftest.py  test_agents.py  test_config.py  test_generators.py  test_integration.py
