[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-backend"
version = "1.0.0"
description = "Genesis Engine - Backend Code Generation Agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Genesis Engine Team", email = "team@genesis-engine.dev"}
]
keywords = ["genesis", "backend", "code-generation", "agents", "fastapi", "django"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"

dependencies = [
    "genesis-agents>=1.0.0",
    "mcpturbo>=1.0.0",
    "genesis-templates>=1.0.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/genesis-engine/genesis-backend"
Repository = "https://github.com/genesis-engine/genesis-backend"
Issues = "https://github.com/genesis-engine/genesis-backend/issues"
Documentation = "https://docs.genesis-engine.dev/backend"

[tool.setuptools.packages.find]
where = ["src"]
include = ["genesis_backend*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]